# soma-schema

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSUMING.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LAUNCH.md  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
assets/: soma-schema-skill.md
docs/: competitor-analysis.md  config.toml
docs/content/: _index.md  cli-reference.md  consuming-in-your-project.md  faq.md  first-migration.md  installation.md  library-usage.md  migration-file-format.md  quickstart.md  roadmap.md  use-with-ai.md  why-different.md
docs/content/concepts/: _index.md  advisory-lock.md  checksum-drift.md  manifest-ordering.md  tracking-table.md
docs/static/: docs.css
docs/templates/: 404.html  base.html  index.html  page.html  section.html
examples/migrations/: migration-order.yaml
examples/migrations/00_setup/: 01_schema.sql
examples/migrations/01_migrated/1/: 20260101_01_init.sql  20260101_02_seed.sql
examples/showcase/: migration-order.yaml
examples/showcase/00_setup/: 01_schema.sql
examples/showcase/01_migrated/1/: 20260101_01_organizations.sql  20260101_02_users.sql  20260101_03_memberships_projects.sql  20260101_04_environments_secrets.sql
examples/showcase/01_migrated/2/: 20260201_01_audit_api_keys.sql  20260201_02_project_description.sql
examples/showcase/01_migrated/3/: 20260301_01_seed_orgs_users.sql  20260301_02_seed_memberships_projects.sql  20260301_03_seed_environments_secrets.sql
src/: agent_rules.rs  discovery.rs  driver.rs  error.rs  lib.rs  main.rs  manifest.rs  migration.rs  migrator.rs  postgres.rs
src/explorer/: mod.rs  viewer.html
tests/: explorer.rs  from_embedded.rs  in_memory_driver.rs  integration.rs
tests/fixtures/embedded-migrations/: migration-order.yaml
tests/fixtures/embedded-migrations/00_setup/: 01_schema.sql
tests/fixtures/embedded-migrations/01_migrated/1/: 20260101_01_init.sql
tools/explorer-data/: Cargo.toml
tools/explorer-data/src/: main.rs
website/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
website/data/: migrations.json
website/src/: app.rs  data.rs  main.rs
website/src/pages/: explorer.rs  landing.rs  mod.rs
website/style/: main.css
website/theme/: tailwind.preset.js
