[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "^0.8", features = ["csr"] }
leptos_router = "^0.8"
soma-ui = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Element", "HtmlBaseElement"] }

[profile.dev]
debug = false        # no debuginfo in dev builds — keeps target/ small; backtraces still show panic messages
