[package]
name = "explorer-data"
version = "0.1.0"
edition = "2021"
description = "Emit migration metadata as JSON for the soma-schema explorer web UI."

[dependencies]
soma-schema = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.52"
